@@ -125,8 +125,12 @@ The History menu allows the recording of plots.  When plots have been
 recorded they can be reviewed by PgUp and PgDn, saved and replaced.
 Recording can be turned on automatically (the Recording item on the
 list) or individual plots can be added (Add or the INS key).
+
 The whole plot history can be saved to or retrieved from an R variable
 in the global environment.
+  The format of recorded plots may change between R versions.
+  Recorded plots should NOT be used as a permanent
+  storage format for R plots.
 
 There is only one graphics history shared by all the windows devices.
 
